2002-10-10  Oliver Kiddle  <opk@zsh.org>

	* 17794: Src/builtin.c, Src/params.c: fix bugs with tied parameters
	(prevent tying array elements and find correct parameter under
	alternate name for unsetting)

2002-10-09  Felix Rosencrantz <f_rosencrantz@yahoo.com>

	* 17793: Completion/Base/Utility/_store_cache: Allow / in cache
	names.

2002-10-07  Peter Stephenson  <pws@csr.com>

	* 17482 (Karl Tomlinson): Src/Modules/termcap.c,
	Src/Modules/terminfo.c: resolve confusion over use of get/set
	functions for special parameters.  Copied from 4.0.

2002-10-06  Bart Schaefer  <schaefer@zsh.org>

	* 17760: Src/lex.c Src/parse.c: Fix case-pattern parsing bug in sh
	emulation.

	* 17714: Src/mkbltnmlst.sh: Fix to 17357, add module dependencies
	even if not adding module autoloads.

2002-10-05  Clint Adams  <clint@zsh.org>

	* 17765: Completion/Debian/Command/_apt: add some missing apt-get
	options.

2002-09-26  Oliver Kiddle  <opk@zsh.org>

	* unposted: Completion/Unix/Command/_bzip2: recognise also .tbz
	and .tbz2 files

	* Akinori Musha: 17719: Completion/BSD/Command/_bsd_pkg: add
	support for the	pkg_create command

2002-09-19  Bart Schaefer  <schaefer@zsh.org>

	* 17692: Src/builtin.c: Prevent typeset of a positional parameter
	before it can do damage, and improve the error message about it.

2002-09-17  Peter Stephenson  <pws@csr.com>

	* 17673: Src/exec.c, Test/A01grammar.ztst:
	  for X in Y; true || B; done && X
	executed X on every iteration.  Same bug with true -> false,
	|| -> &&, && -> ||.

2002-09-16  Oliver Kiddle  <opk@zsh.org>

	* 17678: Src/builtin.c: ignore initial `--' argument to printf
	to satisfy POSIX.

	* 17682: Completion/Zsh/Command/_typeset, Doc/Zsh/builtins.yo:
	add support for -H and -p options to completion

	* 17542 (Thomas Stromberg <thomas@stromberg.org>):
	Completion/Unix/Command/_mount: most systems don't have /etc/mtab

2002-09-06  Oliver Kiddle  <opk@zsh.org>

	* 17632: Completion/Unix/Command/_cvs: add descriptions for keyword