@@ -1,3 +1,8 @@
+2002-10-10  Clint Adams  <clint@zsh.org>
+
+	* 17810 (Martin Waitz): Src/utils.c: bung up memory leak with
+	POSIX.1e capabilities.
+
 2002-10-10  Oliver Kiddle  <opk@zsh.org>
 
 	* 17794: Src/builtin.c, Src/params.c: fix bugs with tied parameters
